# excellgen

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  default_small.yaml  default_syn.yaml
configs/benchmarks/: plots.ipynb
configs/benchmarks/gca/receptive_field/: template_cgca_architecture.yaml  template_mult=1_res=1_channels=16.yaml  template_mult=2_res=1_channels=16.yaml  template_mult=2_res=1_channels=32.yaml  (+2 more)
configs/benchmarks/grids/: performance.txt  receptive_field.txt
configs/benchmarks/prims/: performance3.csv  wall_flowers.csv
docs/: benchmarks.md  generation.md  installation.md  overview.md  shortcuts.md  training.md
scripts/: downscale_images.py  gaussian_scheduler.py  gca_renderer.py  gca_scheduler.py  run.py  viewer.py
scripts/flower_figure/: extract_features.py  train_flowers.py
scripts/gca_figure/: img_manipulate.py
src/sprim/configs/: base.py
src/sprim/gaussians/: brush.py  brush_creator.py  brush_painter.py  debug_voxel_selection.py  envmap.py  gaussian_model.py  global_state.py  latent_exporter.py  path_creator.py  pc_selector.py  primitive_entry.py  primitive_library.py  suggestive_selection.py  tonemapper.py  trainer.py  tree_node.py
src/sprim/inverse/: feature_extractor.py  grower.py  grown_voxels.py  nerfstudio_loader.py
src/sprim/patch/: exact_search.py  extract_patches.py
src/sprim/utils/: dino_extractor.py  exp_utils.py  extraction_helper.py  geometry.py  gui_utils.py  history_handler.py  io_utils.py  optim.py  process_utils.py  viewer_utils.py  voxel_set.py  voxelizer.py
